<resources>
    <string name="app_name">梁煜伟</string>
    <string name="hello_world">Hello World!</string>>
    <string name="upload_assignments">上传作业</string>
    <string name="times">×</string>
    <string name="package_name">包名：cn.zju.id21832004.liangyuwei</string>
    <string name="btn_post_text">提交</string>
    <string name="edit_text">有什么新鲜事。。。</string>
    <string name="calc_name">计算器</string>
    <string name="post_weibo_name">发布微博</string>
    <string name="activate_service_name">启动服务</string>
    <string name="deactivate_service_name">停止服务</string>
    <string name="menu_settings_name">选项设置</string>
    <string name="file_test_name">文件测试</string>
    <string name="btn_getfiledir_text">获取文件路径</string>
    <string name="btn_getexternalstoragedir_text">获取外部存储器目录</string>
    <string name="btn_getexternalfiledir_text">获取外部存储器文件路径</string>
    <string name="username">用户名：</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="password_hint">请输入密码</string>
    <string name="interval">刷新周期：</string>
    <string name="interval_hint">微博刷新周期（秒）</string>

    <string name="get_music_info">获取音乐</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
