<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <EditTextPreference
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextPreference1"
        android:title="@string/username"
        android:key="username"
        android:summary="@string/username_hint"/>

    <EditTextPreference
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextPreference2"
        android:title="@string/password"
        android:key="password"
        android:summary="@string/password_hint"
        android:inputType="textPassword"/>

    <EditTextPreference
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/editTextPreference3"
        android:title="@string/interval"
        android:key="interval"
        android:summary="@string/interval_hint"/>


</PreferenceScreen>